--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ body {
   margin-left: 270px;
   display: flex;
   padding: 20px;
+  margin-bottom: 140px;
 }
 /* .main-part-fourth-subpart-one start */
 .main-part-fourth-subpart-one {
@@ -226,14 +227,73 @@ body {
   font-weight: 700;
   margin-top: 5px;
 }
-.main-part-fourth-subpart-three-description{
-    color: rgba(7, 2, 17, 0.60);
+.main-part-fourth-subpart-three-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  width: 276px;
+  height: 90px;
+}
+.main-part-fourth-subpart-three-image {
+  margin-top: 20px;
+}
+
+/* main-part-fifth-starts */
+.main-part-fifth {
+  width: 1320px;
+  margin-left: 270px;
+}
+.main-part-fifth-text {
+  text-align: center;
+}
+.main-part-fifth-title {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
+.main-part-fifth-post {
+  color: #f00;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-weight: 900;
+}
+.about-offer {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-weight: 900;
+}
+.main-part-fifth-description{
+  color: rgba(7, 2, 17, 0.60);
 font-family: Inter;
 font-size: 20px;
-font-weight: 400;
-width: 276px;
-height: 90px;
+font-weight: 500;
+width:1000px;
+height: 96px;
+margin-left: 110px;
+margin-bottom: 500px;
 }
-.main-part-fourth-subpart-three-image{
-    margin-top: 20px;
+.main-part-fifth-image-parent{
+  position: relative;
+}
+.main-part-fifth-image-child-one{
+  width: 200px;
+  height: 150;
+  position: absolute;
+  bottom: 5px;
+  left: -60px;
+}
+.main-part-fifth-child-two{
+  width: 429px;
+height: 433px;
+position: absolute;
+right: 0px;
+bottom: 233px;
+}
+.main-part-fifth-child-three{
+  position: absolute;
+  right: 280px;
+  bottom: 280px;
 }
