--- a/styles/style.css
+++ b/styles/style.css
@@ -333,3 +333,66 @@ font-weight: 400;
   transform: scale(1.3);
   z-index: 2;
 }
+
+/* subscribe part starts */
+.subscribe-part{
+  width: 1320px;
+  margin-left: 270px;
+  margin-bottom: 140px;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  height: 616px;
+}
+.subscribe-part-description{
+  text-align: center;
+  padding-top: 100px;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+.subscribe-part-description h1{
+  color: #070211;
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+text-transform: capitalize;
+}
+.subscribe-part-description p{
+  color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+width: 896px;
+padding-left: 100px;
+}
+.subscribe-button{
+  text-align: center;
+  margin-top: 48px;
+  position: relative;
+}
+.subscribe-button input[type=email]
+{
+  border: 0px white;
+  padding: 20px;
+  border-radius: 50px;
+  width: 430px;
+  background: #FFF;
+}
+.subscribe-button input::placeholder{
+  color: rgba(7, 2, 17, 0.30);
+font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+}
+.first-btn{
+  position: absolute;
+  border: 0px;
+  padding: 15px;
+  border-radius: 0px 50px 50px 0px;
+  background: #F00;
+  color: #FFF;
+font-family: Inter;
+font-size: 20px;
+font-weight: 600;
+text-transform: capitalize;
+right: 420px;
+}
