--- a/styles/style.css
+++ b/styles/style.css
@@ -396,3 +396,75 @@ font-weight: 600;
 text-transform: capitalize;
 right: 420px;
 }
+
+/* footer part starts */
+footer{
+  margin: auto 0px;
+  background-color: #070211;
+  width: 100%;
+  height: 609px;
+}
+.footer-first{
+  display: flex;
+}
+.first-half{
+  margin-left: 270px;
+}
+.first-half-title{
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+width: 375px;
+height: 80px;
+gap: 20px;
+}
+.second-half{
+  margin-left: 480px;
+}
+.phone{
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.website{
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+margin-top: -20px;
+}
+.first-hr{
+  margin-top: 50px;
+  background: rgba(255, 255, 255, 0.15);
+  width: 71%;
+}
+.footer-images{
+  margin-top: 70px;
+  margin-left: 680px;
+}
+.footer-images a{
+  padding: 10px;
+}
+.footer-last{
+  display: flex;
+}
+.last-first-half h5{
+  margin-left: 270px;
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.last-last-half{
+  margin-left: 850px;
+  margin-top: 35px;
+}
+.last-last-half a{
+  text-decoration: none;
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
