--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,8 @@ body {
   align-items: center;
   justify-content: center;
   margin: 120px; */
+  justify-content: center;
+  align-items: center;
   text-align: center;
   width: 1320px;
   margin: 120px auto;
